force-app/main/default/objects/Account/fields/Buying_Group_sfdc__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group_sfdc__c</fullName>
    <description>Name of Buying Group associated to the account. 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>Name of Buying Group associated to the account - can be entered in salesforce because this is not coming over from M3</inlineHelpText>
    <label>Buying Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>