force-app/main/default/objects/Account/fields/Buying_Program__c.field-meta.xml
<CustomField>
    <fullName>Buying_Program__c</fullName>
    <description>Indicates whether there is a buying program applicable to orders for the account
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field indicates whether this customer is in a buying program</inlineHelpText>
    <label>Buying Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>