force-app/main/default/objects/Account/fields/Buying_Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buying_Program_Notes__c</fullName>
    <description>Additional information regarding the buying program for this account 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field is used to provide information regarding the buying program</inlineHelpText>
    <label>Buying Program Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>