force-app/main/default/objects/Account/fields/Cage_Number__c.field-meta.xml
<CustomField>
    <fullName>Cage_Number__c</fullName>
    <description>Store Data field for commercial and government entity code. Need these numbers assigned to do business with government accounts.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please enter the Cage number (Commercial and Government Entity Code). 

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Cage Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>