force-app/main/default/objects/Account/fields/Cash_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Cash_In_Advance__c</fullName>
    <description>Account needs to pay cash in advance of shipping the order
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field indicates whether the customer needs to pay cash in advance of shipping the order</inlineHelpText>
    <label>Cash In Advance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>