force-app/main/default/objects/Account/fields/Certificate_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Liability__c</fullName>
    <description>Indicates that the Certificate of Liability (required from dealers) has been received</description>
    <inlineHelpText>Indicates that the Certificate of Liability (required from dealers) has been received</inlineHelpText>
    <label>Certificate of Liability Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>