force-app/main/default/objects/Account/fields/Certificate_of_Liability_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Liability_Expiration_Date__c</fullName>
    <description>The Certificate of Liability Expiration Date</description>
    <inlineHelpText>Expiration Date for Certificate of Liability</inlineHelpText>
    <label>Certificate of Liability Expiration Date</label>
    <type>Date</type>
</CustomField>