force-app/main/default/objects/Account/fields/Change_Account_Owner_to_Store_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Change_Account_Owner_to_Store_Nbr__c</fullName>
    <description>Temporary field that allows the sales team to indicate accounts that belong to stores by entering the store number.</description>
    <inlineHelpText>Enter the store number of the store that should own this account</inlineHelpText>
    <label>Change Account Owner to Store Nbr</label>
    <length>20</length>
    <type>Text</type>
</CustomField>