force-app/main/default/objects/Account/fields/City_Exempt__c.field-meta.xml
<CustomField>
    <fullName>City_Exempt__c</fullName>
    <formula>Tax_Exemption_Reason__r.City_Exempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Exempt</label>
    <type>Text</type>
</CustomField>