force-app/main/default/objects/Account/fields/Clean__c.field-meta.xml
<CustomField>
    <fullName>Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For use with Accounts imported from ACT! and Outlook; indicates dedupe complete
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Account data has been cleansed, standardized, and deduped if possible</inlineHelpText>
    <label>Clean</label>
    <type>Checkbox</type>
</CustomField>