force-app/main/default/objects/Account/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date that that the store officially closed.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>The date that the store was closed.

Responsible Owner: Store Operations</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>