force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Salesforce/MSTS field</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--Select--</fullName>
                <default>true</default>
                <label>--Select--</label>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
                <label>Limited Liability Company</label>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <label>Government Agency</label>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Public Education</fullName>
                <label>Public School</label>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
                <label>Sole Proprietorship</label>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>