force-app/main/default/objects/Account/fields/Concept__c.field-meta.xml
<CustomField>
    <fullName>Concept__c</fullName>
    <description>Store Data field to describe the type of retail store design. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please select the retail store design for this store.

Responsible Owner: Dealer Operations and Store Development</inlineHelpText>
    <label>Store Concept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metal Outrigger (American worker)</fullName>
            </value>
            <value>
                <fullName>Sawtooth</fullName>
            </value>
            <value>
                <fullName>Shingle</fullName>
            </value>
            <value>
                <fullName>Slatwall Bays</fullName>
            </value>
            <value>
                <fullName>Slatwall Combo</fullName>
            </value>
            <value>
                <fullName>Slatwall Flat</fullName>
            </value>
            <value>
                <fullName>Wood Outrigger (Multi brand)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>