force-app/main/default/objects/Account/fields/Consumer_Account_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Account_Instructions__c</fullName>
    <defaultValue>&quot;First Name, Last Name, and Email are required&quot;</defaultValue>
    <description>Instructions for entering a Consumer Account</description>
    <inlineHelpText>For Consumer Support Reps: How to create a new consumer account</inlineHelpText>
    <label>Consumer Account Instructions</label>
    <type>TextArea</type>
</CustomField>