force-app/main/default/objects/Account/fields/Contact_Info_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info_Verified_Date__c</fullName>
    <description>The date the contact information on the Account was verified (phone, fax, order confirmation email)
Field Type: GBL
Integrated: N</description>
    <inlineHelpText>Phone, Fax, Email for  Order Confirmation verified date</inlineHelpText>
    <label>Contact Info Verified Date</label>
    <type>Date</type>
</CustomField>