force-app/main/default/objects/Account/fields/Corporate_Account_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Indicator__c</fullName>
    <description>Indicates that the M3 account is a Corporate Account 
Field Type: M3
Integrated: Y</description>
    <inlineHelpText>Wholesale Account is considered a Corporate Account and is used for sharing rules in salesforce.</inlineHelpText>
    <label>Corporate Account Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>