force-app/main/default/objects/Account/fields/Corporate_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Credit is under Corporate Guarantee</description>
    <inlineHelpText>Indicates Credit is under Corporate Guarantee</inlineHelpText>
    <label>Obsolete Corporate Guarantee</label>
    <type>Checkbox</type>
</CustomField>