force-app/main/default/objects/Account/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Creating M3 Cost Center from Store Number by pre-pending 40 or 98.
Field Type: M3, Store Data
Integrated: Y</description>
    <formula>IF( ISPICKVAL(Store_Ownership_Type__c, &quot;Dealer&quot;), &quot;98&quot; +  Store_Number__c , 
IF( ISPICKVAL(Store_Ownership_Type__c, &quot;Corporate&quot;), &quot;40&quot; +  Store_Number__c , &quot;&quot;))</formula>
    <inlineHelpText>This field contains the cost center number.

Responsible Owner: M3 Integration</inlineHelpText>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>