force-app/main/default/objects/Account/fields/Country_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Country_Exempt__c</fullName>
    <formula>Tax_Exemption_Reason__r.Country_Exempt__c</formula>
    <label>Country Exempt</label>
    <type>Text</type>
</CustomField>