force-app/main/default/objects/Account/fields/County_Exempt__c.field-meta.xml
<CustomField>
    <fullName>County_Exempt__c</fullName>
    <formula>Tax_Exemption_Reason__r.County_Exempt__c</formula>
    <label>County Exempt</label>
    <type>Text</type>
</CustomField>