force-app/main/default/objects/Account/fields/Credit_Activation_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Credit_Activation_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Credit Department has completed their pre-activation review of the account.</description>
    <inlineHelpText>Indicates that the Credit Department has completed their pre-activation review of the account.</inlineHelpText>
    <label>Credit Activation Review Complete</label>
    <type>Checkbox</type>
</CustomField>