force-app/main/default/objects/Account/fields/Credit_Application_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Application_Approval_Date__c</fullName>
    <label>Credit Application Approval Date</label>
    <type>Date</type>
</CustomField>