force-app/main/default/objects/Account/fields/Credit_Approval_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Credit_Approval_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Credit Dept has approved credit for this account. 
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates credit has been approved by the Credit Dept. Sent to Salesforce by IA.</inlineHelpText>
    <label>Credit Approved</label>
    <type>Checkbox</type>
</CustomField>