force-app/main/default/objects/Account/fields/Credit_Card_Merch_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Merch_ID__c</fullName>
    <description>This is to store the Credit Card Merchant ID.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This field is to store the Credit Card Merchant ID.

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Credit Card Merch ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>