force-app/main/default/objects/Account/fields/Credit_Card_PNS_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_PNS_Nbr__c</fullName>
    <description>Store data field. Credit Card PNS# is assigned to each store that we use in a Paymentech website called Iterminal.  We use this number in the website to charge or refund credit cards.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Please enter the Credit Card PNS number used in the Paymentech website.

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Credit Card PNS Nbr</label>
    <length>32</length>
    <type>Text</type>
</CustomField>