force-app/main/default/objects/Account/fields/Credit_Card_Processor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Processor__c</fullName>
    <description>This is the credit card process information. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This field contains the Credit Card Processor name.

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Credit Card Processor</label>
    <length>32</length>
    <type>Text</type>
</CustomField>