force-app/main/default/objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <description>Credit Hold flag (red flag image)
Field Type: M3
Integrated: N</description>
    <formula>if(
   Credit_Hold_Active__c = true, IMAGE( &quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20), null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the account is on Credit Hold</inlineHelpText>
    <label>Credit Hold</label>
    <type>Text</type>
</CustomField>