force-app/main/default/objects/Account/fields/Credit_Hold_Active__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field triggers Credit Hold &quot;flag&quot;. Workflow rules based on integrated credit limit data from M3 automatically populate and clear this field. 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>Indicates the account is on Credit Hold and causes the Credit Hold &quot;flag&quot; to show on the account.</inlineHelpText>
    <label>Credit Hold Active</label>
    <type>Checkbox</type>
</CustomField>