force-app/main/default/objects/Account/fields/Credit_Hold_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Instructions__c</fullName>
    <defaultValue>&quot;Past due balance needs to be paid&quot;</defaultValue>
    <description>For use when Credit Hold is active; explains to Call Center Agents what to say to the Customer
Field Type: M3 
Integrated: N</description>
    <inlineHelpText>Explains to Call Center Agents what to say to the Customer</inlineHelpText>
    <label>Credit Hold Instructions</label>
    <type>TextArea</type>
</CustomField>