force-app/main/default/objects/Account/fields/Credit_Hold_Text__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Text__c</fullName>
    <description>Text field to display &quot;CREDIT HOLD&quot; in Console Highlight Panel when the &apos;Credit Hold&apos; flag is active (necessary because graphic image of the flag cannot be displayed in the Highlight Panel).  Workflow Rule populates this field when the Credit Hold Active checkbox is marked; clears the field when it is unmarked.
Field Type: M3
Integrated: N</description>
    <label>Credit Hold Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>