force-app/main/default/objects/Account/fields/Credit_Limit_1__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_1__c</fullName>
    <description>Mapped from M3; Field Level Security limits visibility
Field Type: M3
Integrated: Y</description>
    <label>Credit Limit 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>