force-app/main/default/objects/Account/fields/Credit_Limit_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_2__c</fullName>
    <description>Mapped from M3; only visible to Credit Dept. via Field-Level Security
Field Type: M3
Integrated: Y</description>
    <label>Credit Limit 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>