force-app/main/default/objects/Account/fields/Credit_Review_Nbr_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Nbr_of_Days__c</fullName>
    <description>Number of days between Credit Reviews - used to update Next Credit Review Date based on Last Credit Review and Risk
1 Yr = 365
2 Yr = 730
3 Yr = 1095</description>
    <inlineHelpText>Number of Days between Credit Reviews</inlineHelpText>
    <label>Credit Review Nbr of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>