force-app/main/default/objects/Account/fields/Credit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk__c</fullName>
    <description>Credit Risk Rating determined internally</description>
    <inlineHelpText>Credit Risk</inlineHelpText>
    <label>Credit Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>