force-app/main/default/objects/Account/fields/Credit_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Credit_Scorecard__c</fullName>
    <description>3-digit field that the Credit Team will manually update.</description>
    <inlineHelpText>Responsible: Credit Team 
Data is in SFDC only</inlineHelpText>
    <label>Credit Scorecard</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>