force-app/main/default/objects/Account/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Field Type: GBL
Integrated: N</description>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>