force-app/main/default/objects/Account/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>This is the store email address. 
Field Type: M3 Data 
Integrated: Y -  M3&gt;SF&gt;Xstore</description>
    <inlineHelpText>The email address for this store 

Responsible Owner: M3 Integration</inlineHelpText>
    <label>Customer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>