force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>Account Status Code used in M3; 20 (Active) or 90 (Inactive), 10 is filtered out
Field Type: M3
Integrated: Y</description>
    <inlineHelpText>The status code of the account in M3. See Account Status Description for the corresponding status name.</inlineHelpText>
    <label>Account Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>