force-app/main/default/objects/Account/fields/Customer_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Description__c</fullName>
    <description>What status is this account in, active or inactive?
Field Type: M3
Integrated: Y - M3&gt;SF&gt;&quot;Xstore Pricing Portal</description>
    <inlineHelpText>M3 status of this account; active or inactive.

Responsible Owner: M3 Integration</inlineHelpText>
    <label>Account Status Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <color>#419249</color>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#FF0000</color>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <color>#3333FF</color>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>