force-app/main/default/objects/Account/fields/Data_com_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Latitude__c</fullName>
    <description>Latitude retrieved from free Data.com Geocoding functionality</description>
    <inlineHelpText>Latitude retrieved from free Data.com Geocoding feature</inlineHelpText>
    <label>Data.com Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>