force-app/main/default/objects/Account/fields/Data_Origin__c.field-meta.xml
<CustomField>
    <fullName>Data_Origin__c</fullName>
    <description>The source of the data (system source of truth)
Field Type: GBL
Integrated: Y</description>
    <inlineHelpText>The system where the data originated</inlineHelpText>
    <label>Data Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>