force-app/main/default/objects/Account/fields/Days_Since_Last_Truck_Run__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Truck_Run__c</fullName>
    <formula>If(Today()&gt;Last_Truck_Run__c, Today()-Last_Truck_Run__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Truck Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>