force-app/main/default/objects/Account/fields/DBA_AKA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_AKA_Name__c</fullName>
    <description>Doing Business As or Also Known As Company Name 
Field Type: GBL
Integrated: N</description>
    <label>DBA/AKA Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>