force-app/main/default/objects/Account/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the related Dealer. 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>This is a lookup to the related Dealer.

Responsible Owner: Dealer Operations and Store Operations</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>