force-app/main/default/objects/Account/fields/Dealer_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Agreement_Date__c</fullName>
    <description>Original dealer agreement date for the store
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>The original dealer agreement date for the store.

Responsible Owner: Dealer Operations</inlineHelpText>
    <label>Dealer Agreement Date</label>
    <type>Date</type>
</CustomField>