force-app/main/default/objects/Account/fields/Dealer_Agreement_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Agreement_Renewal_Date__c</fullName>
    <description>This is the current Dealer Agreement Renewal date.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Current Dealer Agreement Renewal date

Responsible Owner: Dealer Operations</inlineHelpText>
    <label>Dealer Agreement Renewal Date</label>
    <type>Date</type>
</CustomField>