force-app/main/default/objects/Account/fields/Dealer_Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Next_Renewal_Date__c</fullName>
    <description>This field is for the agreed upon Next Renewal Date in relation to the current renewal date.
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Next Renewal Date for the Current Renewal Date. For newer stores this date is the same as the Dealer Agreement Renewal Date. 

Responsible Owner: Dealer Operations</inlineHelpText>
    <label>Dealer Next Renewal Date</label>
    <type>Date</type>
</CustomField>