force-app/main/default/objects/Account/fields/Dealer_Renewal_Notification__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Renewal_Notification__c</fullName>
    <description>Used to calculate 120 days in advance of the renewal date</description>
    <formula>Dealer_Next_Renewal_Date__c  - 120</formula>
    <inlineHelpText>120 days in advance of the renewal date</inlineHelpText>
    <label>Dealer Renewal Alert Date 120</label>
    <type>Date</type>
</CustomField>