force-app/main/default/objects/Account/fields/Default_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Delivery_Method__c</fullName>
    <description>Description of the default delivery Method 
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field describes the default delivery method. It is automatically populated from Shipping Method Preference.</inlineHelpText>
    <label>Default Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>