force-app/main/default/objects/Account/fields/Default_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Order_Type__c</fullName>
    <description>The default order type designated in M3. Future integration is desired.
Field Type: M3
Integrated: N</description>
    <inlineHelpText>This field is the default order type designated in M3.</inlineHelpText>
    <label>Default Order  Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>