force-app/main/default/objects/Account/fields/Discount_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Discount_Group_Name__c</fullName>
    <description>Field Type:M3
Integrated: Y</description>
    <label>Discount Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>