force-app/main/default/objects/Account/fields/Discount_Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Model_Code__c</fullName>
    <description>Field Type: M3
Integrated: Y</description>
    <label>Discount Model Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>