force-app/main/default/objects/Account/fields/Display_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Store_Name__c</fullName>
    <description>Store name to be displayed on the POS Receipt. - No longer needed
Field Type:Store Data
Integrated: N</description>
    <inlineHelpText>Store name to be displayed on the POS Receipt.

Responsible Owner: None</inlineHelpText>
    <label>Display Store Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>