force-app/main/default/objects/Account/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Customer Grouping or how product is distibuted to consumers
Field Type:M3
Integrated: Y</description>
    <inlineHelpText>M3 Customer Group Description</inlineHelpText>
    <label>Distribution Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>