force-app/main/default/objects/Account/fields/Distribution_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Code__c</fullName>
    <description>The code assigned to a Customer Grouping or how product is distibuted to consumers.  Used to classify accounts into logical groupings. 
Field Type:M3
Integrated: Y</description>
    <inlineHelpText>M3 Customer Group Code</inlineHelpText>
    <label>Distribution Channel Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>