force-app/main/default/objects/Account/fields/Distribution_Match_up_Requested__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Match_up_Requested__c</fullName>
    <description>Industrial Account field used to indicate that the customer has requested a list of our store locations that “match up” with their locations, so they know where they can send their employees to get shoes.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates the customer has requested a list of our store locations that “match up” with their locations. Data is only in Salesforce.</inlineHelpText>
    <label>Distribution Match-up Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>