force-app/main/default/objects/Account/fields/District_Exempt__c.field-meta.xml
<CustomField>
    <fullName>District_Exempt__c</fullName>
    <formula>Tax_Exemption_Reason__r.District_Exempt__c</formula>
    <label>District Exempt</label>
    <type>Text</type>
</CustomField>