force-app/main/default/objects/Account/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <description>Type: M3
Integrated: Y</description>
    <label>Division Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>