force-app/main/default/objects/Account/fields/Documents_for_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Documents_for_Credit_Application__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>SCSV of the related RWfB Attachments that are identified as Documents for Credit Application</description>
    <inlineHelpText>SCSV of the related RWfB Attachments that are identified as Documents for Credit Application</inlineHelpText>
    <label>Documents for Credit Application</label>
    <type>TextArea</type>
</CustomField>