force-app/main/default/objects/Account/fields/Dunning__c.field-meta.xml
<CustomField>
    <fullName>Dunning__c</fullName>
    <defaultValue>true</defaultValue>
    <description>M3 Account receives Dunning Letters</description>
    <inlineHelpText>M3 Account can receive Dunning Letters</inlineHelpText>
    <label>Dunning</label>
    <type>Checkbox</type>
</CustomField>